# tinbox

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/: elara_story.txt  process_document.py
plans/: _prompt.md  _template.md  context-and-whitespace-refactoring.md  context-aware-algorithm.md  glossary.md
src/tinbox/: __init__.py  cli.py
src/tinbox/core/: __init__.py  cost.py  output.py  processor.py  progress.py  types.py
src/tinbox/core/processor/: __init__.py  docx.py  pdf.py  text.py
src/tinbox/core/processors/: __init__.py  pdf.py  text.py  word.py
src/tinbox/core/translation/: __init__.py  algorithms.py  checkpoint.py  glossary.py  interface.py  litellm.py
src/tinbox/utils/: chunks.py  language.py  logging.py
tests/: test_cli.py
tests/data/: README.md  sample_ar.docx
tests/test_core/: test_cost.py  test_output.py  test_processor.py  test_progress.py
tests/test_core/test_processors/: __init__.py  test_pdf_processor.py  test_text_processor.py  test_word_processor.py
tests/test_core/test_translation/: test_algorithms.py  test_checkpoint.py  test_context_aware.py  test_context_separation.py  test_glossary.py  test_litellm.py  test_litellm_glossary.py  test_reasoning_effort.py  test_whitespace_preservation.py
tests/test_utils/: test_language.py
